--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styles": "^5.9.0",
     "@mui/x-data-grid": "^6.9.0",
     "@prisma/client": "^5.3.1",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "next": "13.4.7",
     "react": "latest",
