--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@prisma/client": "^5.3.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
+    "mime": "^3.0.0",
     "next": "13.4.7",
+    "next-auth": "^4.23.1",
     "react": "latest",
     "react-dom": "latest",
     "ts-node": "^10.9.1"
