--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "latest",
     "@mui/styles": "^5.9.0",
     "@mui/x-data-grid": "^6.9.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
@@ -31,6 +32,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
