--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Terserah12345*@localhost:3306/ecommerce-vascomm"
-NEXTAUTH_SECRET="8350e5a3e24c153df2275c9f80692773"
+DATABASE_URL="
+NEXTAUTH_SECRET=""
